--- a/headwind/src/index.css
+++ b/headwind/src/index.css
@@ -1,7 +1,9 @@
+/* Add the Tailwind directives to your CSS */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* Components */
 @layer components {
     .sidebar-icon {
         @apply relative flex items-center justify-center h-12 w-12 mt-2 mb-2 mx-auto bg-gray-400 hover:bg-green-600 text-green-500 hover:text-white hover:rounded-xl rounded-3xl transition-all duration-300 ease-linear cursor-pointer shadow-lg;
